--- a/Ehelp/view/Base.lproj/Main.storyboard
+++ b/Ehelp/view/Base.lproj/Main.storyboard
@@ -32,7 +32,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="nFo-se-lAl"/>
                                 </constraints>
-                                <state key="normal" title="login"/>
+                                <state key="normal" title="login">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <segue destination="ubd-VN-V6i" kind="show" id="eGf-nq-tmC"/>
                                 </connections>
@@ -42,7 +44,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="MJY-76-b5L"/>
                                 </constraints>
-                                <state key="normal" title="signup"/>
+                                <state key="normal" title="signup">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <segue destination="l7M-lN-avy" kind="show" id="uXv-ed-3HR"/>
                                 </connections>
@@ -98,7 +102,7 @@
             </objects>
             <point key="canvasLocation" x="2091" y="137"/>
         </scene>
-        <!--Emergency TypeVC-->
+        <!--Emergency Type-->
         <scene sceneID="VUm-3h-uOp">
             <objects>
                 <viewController id="dFw-YR-wgU" customClass="EmergencyTypeVC" customModule="Ehelp" customModuleProvider="target" sceneMemberID="viewController">
@@ -111,7 +115,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="KgQ-oD-xoF"/>
                                 </constraints>
-                                <state key="normal" title="Fire Fighter"/>
+                                <state key="normal" title="Fire Fighter">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="fireFighter:" destination="dFw-YR-wgU" eventType="touchUpInside" id="Shj-tJ-JhB"/>
                                 </connections>
@@ -121,7 +127,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="tmh-Cs-ejr"/>
                                 </constraints>
-                                <state key="normal" title="Police"/>
+                                <state key="normal" title="Police">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="police:" destination="dFw-YR-wgU" eventType="touchUpInside" id="Dxm-mM-7c6"/>
                                 </connections>
@@ -131,7 +139,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="nZe-iU-INI"/>
                                 </constraints>
-                                <state key="normal" title="Ambulance"/>
+                                <state key="normal" title="Ambulance">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="ambulance:" destination="dFw-YR-wgU" eventType="touchUpInside" id="XHA-dl-dv6"/>
                                 </connections>
@@ -152,16 +162,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Orh-jJ-99c"/>
                     </view>
-                    <navigationItem key="navigationItem" id="YfM-L6-9yo"/>
+                    <navigationItem key="navigationItem" title="Emergency Type" id="YfM-L6-9yo"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ksz-D7-lU1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3021" y="137"/>
         </scene>
-        <!--Report DetailsVC-->
+        <!--MapVC-->
         <scene sceneID="fcy-JK-Jfg">
             <objects>
-                <viewController storyboardIdentifier="ReportDetails" id="SE3-sH-LR0" customClass="ReportDetailsVC" customModule="Ehelp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MapVC" id="SE3-sH-LR0" customClass="MapVC" customModule="Ehelp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="d8U-QM-2LZ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -176,7 +186,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iV9-0V-yGz">
                                 <rect key="frame" x="15" y="488" width="290" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Next"/>
+                                <state key="normal" title="Next">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="nextTapped:" destination="SE3-sH-LR0" eventType="touchUpInside" id="qhO-V9-ApV"/>
                                 </connections>
@@ -218,7 +230,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tH5-pi-b4r">
                                 <rect key="frame" x="15" y="30" width="290" height="26.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" red="0.37711189899999997" green="0.56633972170000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.17213786070000001" green="0.48309800809999998" blue="0.76386415159999999" alpha="0.56203235039999999" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kxH-kl-cUQ">
@@ -234,7 +246,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lge-rr-9dd">
                                 <rect key="frame" x="15" y="513" width="290" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <state key="normal" title="Submit"/>
+                                <state key="normal" title="Submit">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <action selector="nextTapped:" destination="SE3-sH-LR0" eventType="touchUpInside" id="Ugh-Vr-ciN"/>
                                     <action selector="submitButton:" destination="1Ah-gw-PdX" eventType="touchUpInside" id="WHo-fX-Woo"/>
@@ -273,7 +287,9 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9p-L2-Cg1">
                                 <rect key="frame" x="16" y="518" width="288" height="30"/>
-                                <state key="normal" title="Sign up"/>
+                                <state key="normal" title="Sign up">
+                                    <color key="titleColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="show" id="roR-sm-Ipt"/>
                                 </connections>
@@ -355,19 +371,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oj3-T3-sHz">
-                                <rect key="frame" x="16" y="20" width="288" height="213"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="oj3-T3-sHz">
+                                <rect key="frame" x="15" y="60" width="290" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="S5a-2e-p7k"/>
+                                </constraints>
                             </mapView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zcy-9a-85y">
-                                <rect key="frame" x="18" y="241" width="286" height="172"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PHy-40-HbW">
+                                <rect key="frame" x="15" y="275" width="290" height="26.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" red="0.17213786070000001" green="0.48309800809999998" blue="0.76386415159999999" alpha="0.56203235039999999" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zcy-9a-85y">
+                                <rect key="frame" x="15" y="311.5" width="290" height="120"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="UMo-Qm-HLL"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zcy-9a-85y" firstAttribute="leading" secondItem="QgS-m1-4Ti" secondAttribute="leading" constant="15" id="BbK-1b-Kni"/>
+                            <constraint firstItem="oj3-T3-sHz" firstAttribute="leading" secondItem="QgS-m1-4Ti" secondAttribute="leading" constant="15" id="Jf3-j3-XN4"/>
+                            <constraint firstItem="QgS-m1-4Ti" firstAttribute="trailing" secondItem="oj3-T3-sHz" secondAttribute="trailing" constant="15" id="V3U-Si-szi"/>
+                            <constraint firstItem="PHy-40-HbW" firstAttribute="top" secondItem="oj3-T3-sHz" secondAttribute="bottom" constant="15" id="VXq-gE-dUP"/>
+                            <constraint firstItem="QgS-m1-4Ti" firstAttribute="trailing" secondItem="PHy-40-HbW" secondAttribute="trailing" constant="15" id="ZyR-eH-dPb"/>
+                            <constraint firstItem="oj3-T3-sHz" firstAttribute="top" secondItem="QgS-m1-4Ti" secondAttribute="top" constant="40" id="cFV-8l-UK9"/>
+                            <constraint firstItem="zcy-9a-85y" firstAttribute="top" secondItem="PHy-40-HbW" secondAttribute="bottom" constant="10" id="cXn-XL-gwo"/>
+                            <constraint firstItem="PHy-40-HbW" firstAttribute="leading" secondItem="QgS-m1-4Ti" secondAttribute="leading" constant="15" id="cmM-LK-WFT"/>
+                            <constraint firstItem="QgS-m1-4Ti" firstAttribute="trailing" secondItem="zcy-9a-85y" secondAttribute="trailing" constant="15" id="w6Q-ql-9Wm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="QgS-m1-4Ti"/>
                     </view>
                     <connections>
@@ -382,7 +419,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="W4j-rq-hWZ">
             <objects>
-                <tabBarController id="ubd-VN-V6i" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="tabBarController" id="ubd-VN-V6i" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="h9t-cp-aDr">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -400,14 +437,14 @@
             </objects>
             <point key="canvasLocation" x="1164" y="452"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Reports-->
         <scene sceneID="Iek-1V-lyG">
             <objects>
                 <tableViewController id="TMK-cF-jvq" customClass="ProfileTableVC" customModule="Ehelp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="I7u-M0-2t1">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileCell" id="KOy-2R-wp4" customClass="ProfileCell" customModule="Ehelp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
@@ -420,7 +457,7 @@
                                             <rect key="frame" x="16" y="0.0" width="288" height="44"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" red="0.075182554590000006" green="0.35777064850000001" blue="0.60559018779999996" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -435,7 +472,7 @@
                             <outlet property="delegate" destination="TMK-cF-jvq" id="HEc-kP-Pup"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="kod-3S-vTl"/>
+                    <navigationItem key="navigationItem" title="Reports" id="kod-3S-vTl"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hK8-dd-eXc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -460,4 +497,5 @@
             <point key="canvasLocation" x="2091" y="814"/>
         </scene>
     </scenes>
+    <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
 </document>
